<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/create_account"
            android:visible="true"/>
        <item
            android:id="@+id/nav_permission"
            android:title="@string/role_permission_nav"
            android:visible="true"/>
        <!--<item-->
            <!--android:id="@+id/nav_reminder"-->
            <!--android:title="@string/reminder" />-->
        <!--<item-->
            <!--android:id="@+id/nav_support"-->
            <!--android:title="@string/support_center" />-->
        <item
            android:id="@+id/nav_vault"
            android:title="@string/personal_vault" />
        <item
            android:id="@+id/nav_contract"
            android:title="@string/contact_users" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
