<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:visibility="visible"
        android:layout_margin="@dimen/dim3"
        android:background="@drawable/border_edt"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/yellow_dark"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:text="@string/round"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_round_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/dim3"
        android:background="@drawable/border_edt"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/yellow_dark"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:text="@string/start_date"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dim2"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/dim3"
        android:background="@drawable/border_edt"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/yellow_dark"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:text="@string/end_date"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dim2"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/dim3"
        android:background="@drawable/border_edt"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/yellow_dark"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:text="@string/total_days"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_total_days"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dim5"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_marginTop="@dimen/dim10"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:background="@drawable/border_btn"
        android:text="@string/update"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</LinearLayout>
